# Lumina

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
apps/director-desktop/: main.mjs  package.json  preload.mjs
apps/director-web/: index.html  package.json
apps/director-web/src/: main.tsx
apps/director-web/src/app/: App.tsx  desktop.d.ts  routes.tsx
apps/director-web/src/lib/ws/: client.ts  protocol.ts
apps/director-web/src/styles/: index.css
docs/architecture/: overview.md  v1-desktop-plan.md
docs/ml/: model-registry.md
docs/protocols/: websocket.md
docs/runbooks/: local-dev.md
infra/docker/: director-web.Dockerfile  recon-api.Dockerfile  recon-worker.cuda.Dockerfile
scripts/: bootstrap.sh  dev-up.sh  smoke-test.sh
services/recon-api/: pyproject.toml
services/recon-api/app/: __init__.py  main.py
services/recon-api/app/api/rest/: __init__.py  sessions.py
services/recon-api/app/api/ws/: capture.py
services/recon-api/app/core/: __init__.py  config.py
services/recon-api/app/schemas/: session.py  websocket.py
services/recon-worker/: pyproject.toml
services/recon-worker/worker/: __init__.py  main.py
services/recon-worker/worker/adapters/: blender_adapter.py  colmap_adapter.py  flame_adapter.py  gsplat_adapter.py  nerfstudio_adapter.py
services/recon-worker/worker/pipelines/: calibration_pipeline.py  export_pipeline.py  flame_fit_pipeline.py  gs_train_pipeline.py  ingest_pipeline.py  sfm_pipeline.py  texture_bake_pipeline.py
(+13 files in other folders)
