[project]
name = "lumina"
version = "0.1.0"
description = "Active capture and riggable 3D head reconstruction"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.3.0",
  "ruff>=0.11.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["services", "tests"]
